--- a/ghi/src/styles.css
+++ b/ghi/src/styles.css
@@ -25,9 +25,10 @@ table {
 form {
   margin: 20px auto;
   max-width: 600px;
-  padding: 20px;
+  padding: 30px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 label {
@@ -44,6 +45,7 @@ textarea {
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  background-color: #f9f9f9;
 }
 
 button {
@@ -53,6 +55,7 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 10px 0;
 }
 
 button:hover {
@@ -112,13 +115,14 @@ button:hover {
 }
 
 table {
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
   box-sizing: border-box;
   margin-bottom: 20px;
-  overflow: hidden;
+  /* overflow: hidden; */
+  border-collapse: collapse;
 }
 
 th,
@@ -129,7 +133,24 @@ td {
 }
 
 thead th {
-  background-color: #f2f2f2;
+  background-color: #f5f5f5; /* A very light gray */
+  font-weight: bold;
+  border-bottom: 2px solid #ccc; /* Slightly thicker border between head and body */
+  padding: 10px;
+  text-align: left;
+}
+
+tbody tr {
+  transition: background-color 0.3s;
+}
+
+/* Zebra-striping */
+tbody tr:nth-child(odd) {
+  background-color: #fafafa;
+}
+
+tbody tr:hover {
+  background-color: #e8e8e8;
 }
 
 .workout-container {
@@ -183,4 +204,18 @@ thead th {
 .landing-login-button-link {
   text-decoration: none;
   margin-top: 20px;
+}
+
+h1.text-center {
+  font-size: 1.8em;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+label {
+  font-size: 1.1em;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
