--- a/ghi/src/styles.css
+++ b/ghi/src/styles.css
@@ -133,9 +133,9 @@ td {
 }
 
 thead th {
-  background-color: #f5f5f5; /* A very light gray */
+  background-color: #f5f5f5;
   font-weight: bold;
-  border-bottom: 2px solid #ccc; /* Slightly thicker border between head and body */
+  border-bottom: 2px solid #ccc;
   padding: 10px;
   text-align: left;
 }
@@ -218,4 +218,26 @@ label {
 
 body {
   font-family: "Roboto", sans-serif;
+}
+
+.logout-button {
+  background-color: red;
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: darkred;
+}
+
+nav a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #333;
 }
